# TinyWebServer

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Makefile.make  README.md  build.sh  cleanenv.sh  config.h  config.h.in  config.status  configure  configure.ac  p.c  pkgtest.sh  www  www.conf  x.crt  x.pem  yuki-web.service
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
debian/: README.Debian  autoreconf.after  autoreconf.before  changelog  control  copyright  dirs  files  manpages  postinst  prerm  rules  watch  yuki.substvars
debian/.debhelper/yuki/: dbgsym-build-ids
debian/.debhelper/yuki/dbgsym-root/DEBIAN/: control  md5sums
debian/upstream/: metadata
debian/yuki/DEBIAN/: control  md5sums
html/: index.html
include/: handler.h
sites/: anybind  default  default_ssl
src/: client.c  client.h  common.c  common.h  demo.c  demo.h  parser.c  parser.h  version.h  www.c
src/.deps/: client.Po  parser.Po  www.Po
src/handlers/: dynamic_handler.c  dynamic_handler.h  info.c  info.h  static_file.c  static_file.h
src/handlers/.deps/: dynamic_handler.Po  info.Po  static_file.Po
tests/: test.c  test.h
